# panda_projects

./: README.md  Team_AlphaVille.py  binary_knapsack_GA.py  ex_code.py  giles_1.py  hackerrank_10_day_stat.py  hackerrank_30day_selected_probs.py  p_1.txt
battleship/src/battleship/: .project
cv/: assignment_2_Rajat.ipynb  opencv_fun.py
data_extraction/: README.md  extraction_functions.py  read_files.py
genetic_algorithms/travelling_salesman/: tsp.py
hs_lessons/: code.py  pyproject.toml
hs_lessons/lessons/: README.md  lesson1.md
hs_lessons/lessons/lessons/: lesson2.md
pcc_projects/: README.md
pcc_projects/pizzeria/: pyproject.toml
pcc_projects/pizzeria/pizzeria/: asgi.py  settings.py  urls.py  wsgi.py
pcc_projects/web_application/: pyproject.toml
pcc_projects/web_application/learning_log/: apps.py  models.py
pcc_projects/web_application/learning_log/migrations/: 0001_initial.py  0002_entry.py
pcc_projects/web_application/web_application/: settings.py  urls.py
projects_hyperskill/: README.md  Regex_engine.py  Tic-Tac-Toe.py  banking_system.py  chat_bot.py  coffee_machine.py  credit_calculator.py  currency_converter_cache.py  currency_converter_latest.py  hangman.py  matrix_calculator.py  rock-paper-scissors.py  todo_list.py  zookeeper.py
