[tool.poetry]
name = "web_application"
version = "0.1.0"
description = ""
authors = ["silverscorpio <rajat.newtoneinstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
pre-commit = "^2.20.0"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
